Fix project hovercard tag alignment
Summary: Fix tag alignment on project cards when there are multiple tags. Also fixes T12381.

Test Plan: Review a project and people hovercard in sandbox, ensure multiple tags look as expected.

Reviewers: epriestley

Reviewed By: epriestley

Subscribers: Korvin

Maniphest Tasks: T12381

Differential Revision: https://secure.phabricator.com/D17488

--- a/webroot/rsrc/css/application/project/project-card-view.css
+++ b/webroot/rsrc/css/application/project/project-card-view.css
@@ -43,6 +43,10 @@
   border-radius: 3px;
 }
 
+.project-card-view .project-card-image-href {
+  display: inline-block;
+}
+
 .project-card-view .project-card-item div {
   display: inline;
 }
@@ -103,7 +107,7 @@
   margin-top: 8px;
 }
 
-.project-card-view .phui-header-subheader .phui-tag-core {
+.people-card-view .phui-header-subheader .phui-tag-core {
   text-overflow: ellipsis;
   white-space: nowrap;
   max-width: 232px;
